renamed evaluation objects

--- a/eval/lion_eval_frame_set_01.cfg
+++ b/eval/lion_eval_frame_set_01.cfg
@@ -1,41 +1,41 @@
-<lion_frame_eval_set_s>
-    param: <lion_frame_eval_param_s>
+<lion_eval_frame_set_s>
+    param: <lion_eval_frame_param_s>
         verbosity: -1
     </>
 
-    arr: <lion_frame_eval_arr_s>
+    arr: <lion_eval_frame_arr_s>
 
-    <lion_frame_eval_set_s> param: <lion_frame_eval_param_s> verbosity: -1 name: "HOLOR LITERAL" </> arr: <lion_frame_eval_arr_s>
-        <lion_frame_eval_frame_s> param: <lion_frame_eval_param_s> src:"(y<-)     {y=1:1;};"             out:"(1:1)"       </> </>
-        <lion_frame_eval_frame_s> param: <lion_frame_eval_param_s> src:"(y<-)     {y=1[1::2[2;};"        out:"(1:2:2)"     </> </>
-        <lion_frame_eval_frame_s> param: <lion_frame_eval_param_s> src:"(y<-)     {y=2[2;};"             out:"(2:2)"       </> </>
-        <lion_frame_eval_frame_s> param: <lion_frame_eval_param_s> src:"(y<-)     {y=2[2[0;};"           out:"(0:0):(0:0)" </> </>
-        <lion_frame_eval_frame_s> param: <lion_frame_eval_param_s> src:"(y<-)     {y=((1:2):(4:5))]1;};" out:"(4:5)"       </> </>
-        <lion_frame_eval_frame_s> param: <lion_frame_eval_param_s> src:"(y, z <-) {y=1; z=2;};"          out:"1,2"         </> </>
+    <lion_eval_frame_set_s> param: <lion_eval_frame_param_s> verbosity: -1 name: "HOLOR LITERAL" </> arr: <lion_eval_frame_arr_s>
+        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"(y<-)     {y=1:1;};"             out:"(1:1)"       </> </>
+        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"(y<-)     {y=1[1::2[2;};"        out:"(1:2:2)"     </> </>
+        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"(y<-)     {y=2[2;};"             out:"(2:2)"       </> </>
+        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"(y<-)     {y=2[2[0;};"           out:"(0:0):(0:0)" </> </>
+        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"(y<-)     {y=((1:2):(4:5))]1;};" out:"(4:5)"       </> </>
+        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"(y, z <-) {y=1; z=2;};"          out:"1,2"         </> </>
     </> </>
 
-    <lion_frame_eval_set_s> param: <lion_frame_eval_param_s> name: "HOLOR SYNTAX" verbosity: -1 </> arr: <lion_frame_eval_arr_s>
-        <lion_frame_eval_frame_s> param: <lion_frame_eval_param_s> src:"( y   <- a,b ) { y = (a:b)]1; };"               in:"1:2, 2:3"     out:"(2:3)" </> </>
-        <lion_frame_eval_frame_s> param: <lion_frame_eval_param_s> src:"( y   <- a,b ) { y = a + b; };"                 in:"1:1, 2:2"     out: "3:3" </>  </>
-        <lion_frame_eval_frame_s> param: <lion_frame_eval_param_s> src:"( y,z <- a,b ) { y=a+b; z=b-a; };"              in:"1:1, 2:2"     out: "3:3, 1:1" </>  </>
-        <lion_frame_eval_frame_s> param: <lion_frame_eval_param_s> src:"( y   <- a,b ) { y = a * b; };"                 in:"1:1, 2:2"     out: "2:2" </>  </>
-        <lion_frame_eval_frame_s> param: <lion_frame_eval_param_s> src:"( y   <- a,b ) { y = a:b:2[2; };"               in:"2[1, 2:3"     out:"(1:1):(2:3):(2:2)"  </> </>
-        <lion_frame_eval_frame_s> param: <lion_frame_eval_param_s> src:"( y   <- a,b ) { y = (a:b):(1:1); };"           in:"1:2, 2:3"     out:"(1:2):(2:3):(1:1)"  </> </>
-        <lion_frame_eval_frame_s> param: <lion_frame_eval_param_s> src:"( y   <- a )   { y = (2[2[a); };"               in:"1:2:3"        out: "((1:2:3):(1:2:3)):((1:2:3):(1:2:3))"  </> </>
-        <lion_frame_eval_frame_s> param: <lion_frame_eval_param_s> src:"( y   <- a )   { y = a + a + 1 + #; };"         in:"1"            out:"3" </> </>
-        <lion_frame_eval_frame_s> param: <lion_frame_eval_param_s> src:"( y   <- a,b ) { y = b+a/( a~**a )^( 1/2 ); };" in:"(1:1), (1:1)" out:"(1.70711:1.70711)"  </> </>
+    <lion_eval_frame_set_s> param: <lion_eval_frame_param_s> name: "HOLOR SYNTAX" verbosity: -1 </> arr: <lion_eval_frame_arr_s>
+        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"( y   <- a,b ) { y = (a:b)]1; };"               in:"1:2, 2:3"     out:"(2:3)" </> </>
+        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"( y   <- a,b ) { y = a + b; };"                 in:"1:1, 2:2"     out: "3:3" </>  </>
+        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"( y,z <- a,b ) { y=a+b; z=b-a; };"              in:"1:1, 2:2"     out: "3:3, 1:1" </>  </>
+        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"( y   <- a,b ) { y = a * b; };"                 in:"1:1, 2:2"     out: "2:2" </>  </>
+        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"( y   <- a,b ) { y = a:b:2[2; };"               in:"2[1, 2:3"     out:"(1:1):(2:3):(2:2)"  </> </>
+        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"( y   <- a,b ) { y = (a:b):(1:1); };"           in:"1:2, 2:3"     out:"(1:2):(2:3):(1:1)"  </> </>
+        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"( y   <- a )   { y = (2[2[a); };"               in:"1:2:3"        out: "((1:2:3):(1:2:3)):((1:2:3):(1:2:3))"  </> </>
+        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"( y   <- a )   { y = a + a + 1 + #; };"         in:"1"            out:"3" </> </>
+        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"( y   <- a,b ) { y = b+a/( a~**a )^( 1/2 ); };" in:"(1:1), (1:1)" out:"(1.70711:1.70711)"  </> </>
     </> </>
 
-    <lion_frame_eval_set_s> param: <lion_frame_eval_param_s> name: "HOLOR SYNTAX2" verbosity: -1 epsilon: 1E-3 max_dev: 1E-2 </> arr: <lion_frame_eval_arr_s>
-        <lion_frame_eval_frame_s> param: <lion_frame_eval_param_s> src: "( y <- a = 2[# ) { y = a; };" in:"f2_t(1:2)"          out:"f3_t(1:2)" </> </>
-        <lion_frame_eval_frame_s> param: <lion_frame_eval_param_s> src: "( y <- a ) { y = a; };"       in:"f2_t((1:2):(3:4))"  out:"f2_t((1:2):(3:4))"  </> </>
-        <lion_frame_eval_frame_s> param: <lion_frame_eval_param_s> src: "( y <- a ) { y = exp( lgst((-(a-3)*5*a+5)+16 )+lgst(-1)); };" in: "4"  out:"2.718281828" </> </>
-        <lion_frame_eval_frame_s> param: <lion_frame_eval_param_s> src: "( y <- a ) { y = a~~; };"     in: "f2_t((1:2):(3:4))"     out:"f2_t((1:2):(3:4))"  </> </>
-        <lion_frame_eval_frame_s> param: <lion_frame_eval_param_s> src: "( y <- a ) { y = ( a~ ** a ); };"   in:  "(1:2):(3:4)"    out: "(10:14):(14:20)"   </> </>
-        <lion_frame_eval_frame_s> param: <lion_frame_eval_param_s> src: "( y <- a, b ) { y = a / ( b + a ); };" in: "1:2, f2_t(2)" out: "0.33333:0.5"       </> </>
+    <lion_eval_frame_set_s> param: <lion_eval_frame_param_s> name: "HOLOR SYNTAX2" verbosity: -1 epsilon: 1E-3 max_dev: 1E-2 </> arr: <lion_eval_frame_arr_s>
+        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a = 2[# ) { y = a; };" in:"f2_t(1:2)"          out:"f3_t(1:2)" </> </>
+        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a ) { y = a; };"       in:"f2_t((1:2):(3:4))"  out:"f2_t((1:2):(3:4))"  </> </>
+        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a ) { y = exp( lgst((-(a-3)*5*a+5)+16 )+lgst(-1)); };" in: "4"  out:"2.718281828" </> </>
+        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a ) { y = a~~; };"     in: "f2_t((1:2):(3:4))"     out:"f2_t((1:2):(3:4))"  </> </>
+        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a ) { y = ( a~ ** a ); };"   in:  "(1:2):(3:4)"    out: "(10:14):(14:20)"   </> </>
+        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a, b ) { y = a / ( b + a ); };" in: "1:2, f2_t(2)" out: "0.33333:0.5"       </> </>
     </> </>
 
-    <lion_frame_eval_frame_s> param: <lion_frame_eval_param_s>
+    <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s>
         name: "ACKERMANN" verbosity: -1
         src:
         "
@@ -54,8 +54,8 @@
         out:"29"
     </> </>
 
-    <lion_frame_eval_frame_s>
-        param: <lion_frame_eval_param_s>
+    <lion_eval_frame_plain_s>
+        param: <lion_eval_frame_param_s>
             name: "FIBONNACCI" verbosity: -1
             src:
             "
@@ -75,8 +75,8 @@
         ap_cycles: 12
     </>
 
-    <lion_frame_eval_frame_s>
-        param: <lion_frame_eval_param_s>
+    <lion_eval_frame_plain_s>
+        param: <lion_eval_frame_param_s>
             name: "ADAPT (Vector)" verbosity: -1
 
             src:
@@ -93,8 +93,8 @@
         </>
     </>
 
-    <lion_frame_eval_frame_s>
-        param: <lion_frame_eval_param_s>
+    <lion_eval_frame_plain_s>
+        param: <lion_eval_frame_param_s>
             name: "Frame adaptive" verbosity: -1 max_dev: 1E-4
             src:
             "
@@ -110,8 +110,8 @@
         jacobian_test: true
     </>
 
-    <lion_frame_eval_frame_s>
-        param: <lion_frame_eval_param_s>
+    <lion_eval_frame_plain_s>
+        param: <lion_eval_frame_param_s>
             name: "Frame MLP" verbosity: -1 max_dev: 1E-4
             src:
             "
@@ -138,8 +138,8 @@
         jacobian_test: true
     </>
 
-    <lion_frame_eval_frame_s>
-        param: <lion_frame_eval_param_s>
+    <lion_eval_frame_plain_s>
+        param: <lion_eval_frame_param_s>
             name: "Frame nested" verbosity: -1 max_dev: 1E-4
             src:
             "
@@ -167,8 +167,8 @@
         jacobian_test: true
     </>
 
-    <lion_frame_eval_frame_s>
-        param: <lion_frame_eval_param_s>
+    <lion_eval_frame_plain_s>
+        param: <lion_eval_frame_param_s>
             name: "Frame cyclic" verbosity: 0 max_dev: 1E-4
             src: "( y <- a ) { cyclic r = 1; q = a + r; r = q; y = q; };"
             in: "1"
@@ -178,8 +178,8 @@
         ap_cycles: 5
     </>
 
-    <lion_frame_eval_frame_s>
-        param: <lion_frame_eval_param_s>
+    <lion_eval_frame_plain_s>
+        param: <lion_eval_frame_param_s>
             name: "Frame cyclic wrap" verbosity: -1 max_dev: 1E-4
             src: "( y <- a )
             {
@@ -200,8 +200,8 @@
         ap_cycles: 5
     </>
 
-    <lion_frame_eval_frame_cyclic_s>
-        param: <lion_frame_eval_param_s>
+    <lion_eval_frame_cyclic_s>
+        param: <lion_eval_frame_param_s>
             name: "Frame cyclic" verbosity: -1 max_dev: 1E-4
             src: "( y <- a ) { cyclic r = 1; q = a * r; r = q; y = q; };"
             in: "1, 2, 3"
@@ -209,8 +209,8 @@
         jacobian_test: true
     </>
 
-    <lion_frame_eval_frame_cyclic_s>
-        param: <lion_frame_eval_param_s>
+    <lion_eval_frame_cyclic_s>
+        param: <lion_eval_frame_param_s>
             name: "Frame cyclic adaptive" verbosity: -1 max_dev: 1E-4
             src: "( y <- a ) { cyclic r = 2 [ dimof( a ) [ 1; adaptive w = 2 [ dimof( a ) [ #; q = ( w * a ) * r; r = q; y = q; };"
             in: "1:2, 2:1, 3:0"
@@ -218,8 +218,8 @@
         jacobian_test: true
     </>
 
-    <lion_frame_eval_frame_cyclic_s>
-        param: <lion_frame_eval_param_s>
+    <lion_eval_frame_cyclic_s>
+        param: <lion_eval_frame_param_s>
             name: "Frame LSTM" verbosity: 10 max_dev: 1E-3 epsilon: 1E-3
             src:
             "
