--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -3,8 +3,8 @@
  */
 
 <bcore_main_set_s> arr: <bcore_main_arr_s>
-//    <#file> "../eval/lion_nop_eval_set_01.cfg" </>
-    <#file> "../eval/lion_frame_eval_set_01.cfg" </>
+    <#file> "../eval/lion_eval_nop_set_01.cfg" </>
+    <#file> "../eval/lion_eval_frame_set_01.cfg" </>
 
 //    <#file> "../training/lion_test01.cfg" </>
 //    <#file> "../training/lion_test02.cfg" </>
@@ -14,6 +14,6 @@
 
 //    <#file> "../dev/kjv/lion_lstm_v0.cfg" </>
 //    <#file> "../dev/kjv/lion_lstm_v2.cfg" </>
-//    <#file> "../dev/kjv/lion_lstm_v3.cfg" </>
+//    <#file> "../dev/kjv/a02/ll03.cfg" </>
 
 </></>
