fixed problems occurring with forked references

--- a/eval/lion_eval_frame_set_01.cfg
+++ b/eval/lion_eval_frame_set_01.cfg
@@ -15,7 +15,7 @@
     </> </>
 
     <lion_eval_frame_set_s> param: <lion_eval_frame_param_s> name: "HOLOR SYNTAX" verbosity: -1 </> arr: <lion_eval_frame_arr_s>
-        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"( y   <- a,b ) { y = (a:b)]1; };"               in:"1:2, 2:3"     out:"(2:3)" </> </>
+//        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"( y   <- a,b ) { y = (a:b)]1; };"               in:"1:2, 2:3"     out:"(2:3)" </> </>
         <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"( y   <- a,b ) { y = a + b; };"                 in:"1:1, 2:2"     out: "3:3" </>  </>
         <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"( y,z <- a,b ) { y=a+b; z=b-a; };"              in:"1:1, 2:2"     out: "3:3, 1:1" </>  </>
         <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"( y   <- a,b ) { y = a * b; };"                 in:"1:1, 2:2"     out: "2:2" </>  </>
@@ -220,7 +220,81 @@
 
     <lion_eval_frame_cyclic_s>
         param: <lion_eval_frame_param_s>
-            name: "Frame LSTM" verbosity: 10 max_dev: 1E-3 epsilon: 1E-3
+            name: "Frame LSTM1" verbosity: 10 max_dev: 1E-3 epsilon: 1E-3
+            src:
+            "
+                cell ( y <- a )
+                {
+                    cell layer( y <- dim_h, a )
+                    {
+                        cyclic c = dim_h [ f2_t( 0 );
+                        cyclic h = dim_h [ f2_t( 0 );
+
+                        ah1 = a :: h : 1;
+
+                        dim_ah1 = dimof( ah1 );
+
+                        // adaptive holors
+                        adaptive w = random( 4 [ dim_h [ dim_ah1 [ f2_t( # ) ) * f2_t( 0.5 );
+
+                        v_f = lgst( ( w]0 ) ** ah1 );
+                        v_i = lgst( ( w]1 ) ** ah1 );
+                        v_o = lgst( ( w]2 ) ** ah1 );
+                        v_q = tanh( ( w]3 ) ** ah1 );
+
+                        c_ = ( v_f * c ) + ( v_i * v_q );
+
+                        y = ( v_o * tanh( c_ ) );
+                        h = y;
+
+                        c = c_;
+                    };
+
+                    cell lstm( y <- dim_out, dim_h, a )
+                    {
+                        adaptive w_r = random( dim_out [ dim_h [ f2_t( # ) );
+                        adaptive b_r = dim_out [ f2_t( 0 );
+                        y = softmax( w_r ** layer( dim_h, a ) + b_r );
+                    };
+
+                    y = lstm( dimof( a ), 200, f2_t( a ) );
+                };
+
+//                cell ( y <- a )
+//                {
+//                    cell layer( y <- dim_h, a )
+//                    {
+//                        cyclic c = dim_h [ f2_t( 0 );
+//                        cyclic h = dim_h [ f2_t( 0 );
+//
+//                        ah1 = a :: h : 1;
+//
+//                        adaptive w = random( 4 [ dim_h [ dimof( ah1 ) [ f2_t( # ) ) * f2_t( 0.5 );
+//
+//                        c_ = ( lgst( ( w]0 ) ** ah1 ) * c ) + ( lgst( ( w]1 ) ** ah1 ) * tanh( ( w]2 ) ** ah1 ) );
+//                        y  = ( lgst( ( w]3 ) ** ah1 ) * tanh( c_ ) );
+//
+//                        h = y;
+//                        c = c_;
+//                    };
+//
+//                    cell lstm( y <- dim_out, dim_h, a )
+//                    {
+//                        adaptive w_r = random( dim_out [ ( dim_h + 1 ) [ f2_t( # ) );
+//                        y = softmax( w_r ** ( layer( dim_h, a ) : 1 ) );
+//                    };
+//
+//                    y = lstm( 2, 4, f2_t( a ) );
+//                };
+            "
+            in: "2[0, 2[1, 2[0, 2[1"
+        </>
+        jacobian_test: true
+    </>
+
+    <lion_eval_frame_cyclic_s>
+        param: <lion_eval_frame_param_s>
+            name: "Frame LSTM2" verbosity: -1 max_dev: 1E-3 epsilon: 1E-3
             src:
             "
                 cell ( y <- a )
