work on consistency; bug fixes

--- a/eval/lion_eval_frame_set_01.cfg
+++ b/eval/lion_eval_frame_set_01.cfg
@@ -5,7 +5,7 @@
 
     arr: <lion_eval_frame_arr_s>
 
-    <lion_eval_frame_set_s> param: <lion_eval_frame_param_s> verbosity: -1 name: "HOLOR LITERAL" </> arr: <lion_eval_frame_arr_s>
+    <lion_eval_frame_set_s> param: <lion_eval_frame_param_s> verbosity: -1 name: "HOLOR LITERAL" jacobian_test: true recovery_test: true </> arr: <lion_eval_frame_arr_s>
         <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"(y<-)     {y=1:1;};"             out:"(1:1)"       </> </>
         <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"(y<-)     {y=1[1::2[2;};"        out:"(1:2:2)"     </> </>
         <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"(y<-)     {y=2[2;};"             out:"(2:2)"       </> </>
@@ -14,9 +14,9 @@
         <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"(y, z <-) {y=1; z=2;};"          out:"1,2"         </> </>
     </> </>
 
-    <lion_eval_frame_set_s> param: <lion_eval_frame_param_s> name: "HOLOR SYNTAX" verbosity: -1 </> arr: <lion_eval_frame_arr_s>
-//        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"( y   <- a,b ) { y = (a:b)]1; };"               in:"1:2, 2:3"     out:"(2:3)" </> </>
+    <lion_eval_frame_set_s> param: <lion_eval_frame_param_s> name: "HOLOR SYNTAX" verbosity: -1 jacobian_test: true  recovery_test: true </> arr: <lion_eval_frame_arr_s>
         <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"( y   <- a,b ) { y = a + b; };"                 in:"1:1, 2:2"     out: "3:3" </>  </>
+        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"( y   <- a,b ) { y = (a:b)]1; };"               in:"1:2, 2:3"     out:"(2:3)" </> </>
         <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"( y,z <- a,b ) { y=a+b; z=b-a; };"              in:"1:1, 2:2"     out: "3:3, 1:1" </>  </>
         <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"( y   <- a,b ) { y = a * b; };"                 in:"1:1, 2:2"     out: "2:2" </>  </>
         <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"( y   <- a,b ) { y = a:b:2[2; };"               in:"2[1, 2:3"     out:"(1:1):(2:3):(2:2)"  </> </>
@@ -26,7 +26,7 @@
         <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src:"( y   <- a,b ) { y = b+a/( a~**a )^( 1/2 ); };" in:"(1:1), (1:1)" out:"(1.70711:1.70711)"  </> </>
     </> </>
 
-    <lion_eval_frame_set_s> param: <lion_eval_frame_param_s> name: "HOLOR SYNTAX2" verbosity: -1 epsilon: 1E-3 max_dev: 1E-2 </> arr: <lion_eval_frame_arr_s>
+    <lion_eval_frame_set_s> param: <lion_eval_frame_param_s> name: "HOLOR SYNTAX2" verbosity: -1 epsilon: 1E-3 max_dev: 1E-2  jacobian_test: true recovery_test: true </> arr: <lion_eval_frame_arr_s>
         <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a = 2[# ) { y = a; };" in:"f2_t(1:2)"          out:"f3_t(1:2)" </> </>
         <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a ) { y = a; };"       in:"f2_t((1:2):(3:4))"  out:"f2_t((1:2):(3:4))"  </> </>
         <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a ) { y = exp( lgst((-(a-3)*5*a+5)+16 )+lgst(-1)); };" in: "4"  out:"2.718281828" </> </>
@@ -51,6 +51,8 @@
                 y = ack( 3, 2 );
             }
         "
+        jacobian_test: false
+        recovery_test: true
         out:"29"
     </> </>
 
@@ -70,8 +72,9 @@
                 }
             "
             out:"144"
+            jacobian_test: false
+            recovery_test: true
         </>
-        jacobian_test: false
         ap_cycles: 12
     </>
 
@@ -90,6 +93,8 @@
 
             in: "( 1 : 2 )"
             out: "2.5"
+            jacobian_test: true
+            recovery_test: true
         </>
     </>
 
@@ -106,8 +111,9 @@
             "
             in: "1:2"
             out:"5:4"
+            jacobian_test: true
+            recovery_test: true
         </>
-        jacobian_test: true
     </>
 
     <lion_eval_frame_plain_s>
@@ -134,8 +140,9 @@
             "
             in: "32[1"
             out:"1[-0.10596"
+            jacobian_test: true
+            recovery_test: true
         </>
-        jacobian_test: true
     </>
 
     <lion_eval_frame_plain_s>
@@ -163,8 +170,9 @@
             "
             in: "32[1"
             out:"1[-0.10596"
+            jacobian_test: true
+            recovery_test: true
         </>
-        jacobian_test: true
     </>
 
     <lion_eval_frame_plain_s>
@@ -173,8 +181,9 @@
             src: "( y <- a ) { cyclic r = 1; q = a + r; r = q; y = q; };"
             in: "1"
             out:"6"
+            jacobian_test: false
+            recovery_test: true
         </>
-        jacobian_test: false
         ap_cycles: 5
     </>
 
@@ -195,8 +204,9 @@
             };"
             in: "1"
             out:"6"
+            jacobian_test: false
+            recovery_test: true
         </>
-        jacobian_test: false
         ap_cycles: 5
     </>
 
@@ -205,8 +215,9 @@
             name: "Frame cyclic" verbosity: -1 max_dev: 1E-4
             src: "( y <- a ) { cyclic r = 1; q = a * r; r = q; y = q; };"
             in: "1, 2, 3"
+            jacobian_test: true
+            recovery_test: true
         </>
-        jacobian_test: true
     </>
 
     <lion_eval_frame_cyclic_s>
@@ -214,13 +225,14 @@
             name: "Frame cyclic adaptive" verbosity: -1 max_dev: 1E-4
             src: "( y <- a ) { cyclic r = 2 [ dimof( a ) [ 1; adaptive w = 2 [ dimof( a ) [ #; q = ( w * a ) * r; r = q; y = q; };"
             in: "1:2, 2:1, 3:0"
+            jacobian_test: true
+            recovery_test: true
         </>
-        jacobian_test: true
     </>
 
     <lion_eval_frame_cyclic_s>
         param: <lion_eval_frame_param_s>
-            name: "Frame LSTM1" verbosity: 10 max_dev: 1E-3 epsilon: 1E-3
+            name: "Frame LSTM1" verbosity: -1 max_dev: 1E-3 epsilon: 1E-3
             src:
             "
                 cell ( y <- a )
@@ -232,64 +244,28 @@
 
                         ah1 = a :: h : 1;
 
-                        dim_ah1 = dimof( ah1 );
+                        adaptive w = random( 4 [ dim_h [ dimof( ah1 ) [ f2_t( # ) ) * f2_t( 0.5 );
 
-                        // adaptive holors
-                        adaptive w = random( 4 [ dim_h [ dim_ah1 [ f2_t( # ) ) * f2_t( 0.5 );
+                        c_ = ( lgst( ( w]0 ) ** ah1 ) * c ) + ( lgst( ( w]1 ) ** ah1 ) * tanh( ( w]2 ) ** ah1 ) );
+                        y  = ( lgst( ( w]3 ) ** ah1 ) * tanh( c_ ) );
 
-                        v_f = lgst( ( w]0 ) ** ah1 );
-                        v_i = lgst( ( w]1 ) ** ah1 );
-                        v_o = lgst( ( w]2 ) ** ah1 );
-                        v_q = tanh( ( w]3 ) ** ah1 );
-
-                        c_ = ( v_f * c ) + ( v_i * v_q );
-
-                        y = ( v_o * tanh( c_ ) );
                         h = y;
-
                         c = c_;
                     };
 
                     cell lstm( y <- dim_out, dim_h, a )
                     {
-                        adaptive w_r = random( dim_out [ dim_h [ f2_t( # ) );
-                        adaptive b_r = dim_out [ f2_t( 0 );
-                        y = softmax( w_r ** layer( dim_h, a ) + b_r );
+                        adaptive w_r = random( dim_out [ ( dim_h + 1 ) [ f2_t( # ) );
+                        y = softmax( w_r ** ( layer( dim_h, a ) : 1 ) );
                     };
 
-                    y = lstm( dimof( a ), 200, f2_t( a ) );
+                    y = lstm( 2, 4, f2_t( a ) );
                 };
-
-//                cell ( y <- a )
-//                {
-//                    cell layer( y <- dim_h, a )
-//                    {
-//                        cyclic c = dim_h [ f2_t( 0 );
-//                        cyclic h = dim_h [ f2_t( 0 );
-//
-//                        ah1 = a :: h : 1;
-//
-//                        adaptive w = random( 4 [ dim_h [ dimof( ah1 ) [ f2_t( # ) ) * f2_t( 0.5 );
-//
-//                        c_ = ( lgst( ( w]0 ) ** ah1 ) * c ) + ( lgst( ( w]1 ) ** ah1 ) * tanh( ( w]2 ) ** ah1 ) );
-//                        y  = ( lgst( ( w]3 ) ** ah1 ) * tanh( c_ ) );
-//
-//                        h = y;
-//                        c = c_;
-//                    };
-//
-//                    cell lstm( y <- dim_out, dim_h, a )
-//                    {
-//                        adaptive w_r = random( dim_out [ ( dim_h + 1 ) [ f2_t( # ) );
-//                        y = softmax( w_r ** ( layer( dim_h, a ) : 1 ) );
-//                    };
-//
-//                    y = lstm( 2, 4, f2_t( a ) );
-//                };
             "
             in: "2[0, 2[1, 2[0, 2[1"
+            jacobian_test: true
+            recovery_test: true
         </>
-        jacobian_test: true
     </>
 
     <lion_eval_frame_cyclic_s>
@@ -345,8 +321,9 @@
                 };
             "
             in: "0:1, 1:0, 0:1, 0:1"
+            jacobian_test: true
+            recovery_test: true
         </>
-        jacobian_test: true
     </>
 
     </>
