work on recurrent training

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -15,5 +15,6 @@
 //    <#file> "../dev/kjv/lion_lstm_v0.cfg" </>
 //    <#file> "../dev/kjv/lion_lstm_v2.cfg" </>
 //    <#file> "../dev/kjv/a02/ll05.cfg" </>
+    <#file> "../dev/holmes/a02/ll01.cfg" </>
 
 </></>
