fixed a nesting issue when catenating cells

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -15,6 +15,7 @@
 //    <#file> "../dev/kjv/lion_lstm_v0.cfg" </>
 //    <#file> "../dev/kjv/lion_lstm_v2.cfg" </>
 //    <#file> "../dev/kjv/a02/ll05.cfg" </>
-    <#file> "../dev/holmes/a02/ll01.cfg" </>
+//    <#file> "../dev/holmes/a02/ll01.cfg" </>
+//    <#file> "../dev/tolstoi_ak/a01/ll06.cfg" </>
 
 </></>
