--- a/eval/lion_eval_frame_set_01.cfg
+++ b/eval/lion_eval_frame_set_01.cfg
@@ -100,6 +100,32 @@
 
     <lion_eval_frame_plain_s>
         param: <lion_eval_frame_param_s>
+            name: "ADAPT (extern)" verbosity: 20
+
+            src:
+            "
+                cell( y <- a )
+                {
+                    cell c1( y <- w, a )
+                    {
+                        y = w * a;
+                    };
+
+                    adaptive w = #;
+
+                    /// this should produce a just one adaptive (not 3) in final mcode
+                    y = c1( w ) <: c1( w ) <: c1( w, a );
+                };
+            "
+
+            in: "1"
+            jacobian_test: true
+            recovery_test: true
+        </>
+    </>
+
+    <lion_eval_frame_plain_s>
+        param: <lion_eval_frame_param_s>
             name: "Frame adaptive" verbosity: -1 max_dev: 1E-4
             src:
             "
