--- a/eval/lion_eval_frame_set_01.cfg
+++ b/eval/lion_eval_frame_set_01.cfg
@@ -100,7 +100,7 @@
 
     <lion_eval_frame_plain_s>
         param: <lion_eval_frame_param_s>
-            name: "ADAPT (extern)" verbosity: 20
+            name: "ADAPT (extern)" verbosity: -1
 
             src:
             "
@@ -113,7 +113,7 @@
 
                     adaptive w = #;
 
-                    /// this should produce a just one adaptive (not 3) in final mcode
+                    /// this should produce just one adaptive (not 3) in final mcode
                     y = c1( w ) <: c1( w ) <: c1( w, a );
                 };
             "
