--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -4,10 +4,11 @@
 
 <bcore_main_set_s> arr: <bcore_main_arr_s>
 //    <#file> "../eval/lion_eval_nop_set_01.cfg" </>
-    <#file> "../eval/lion_eval_frame_set_01.cfg" </>
+//    <#file> "../eval/lion_eval_frame_set_01.cfg" </>
 
 //    <#file> "../training/lion_test01.cfg" </>
 //    <#file> "../training/lion_test02.cfg" </>
+    <#file> "../training/bhpt_test01.cfg" </>
 
 //    <#file> "../dev/kjv/hard_lstm_v0.cfg" </>
 //    <#file> "../dev/kjv/hard_lstm_v2.cfg" </>
