work on bhpt framework

--- a/training/bhpt_test01.cfg
+++ b/training/bhpt_test01.cfg
@@ -2,12 +2,12 @@
 <bhpt_frame_s>
     tutor:
         <bhpt_tutor_sine_random_s>
-            input_size:   32
-            rval_prime: 1234
-            pos_tgt:  0.9
-            neg_tgt: -0.9
-            rval_test: 5753
-            test_size: 10000
+            input_size :   32
+            rval_prime : 1234
+            pos_tgt    :  0.9
+            neg_tgt    : -0.9
+            rval_test  : 5753
+            test_size  : 10000
         </>
 
     builder:
@@ -40,11 +40,11 @@
             epsilon: 0.001
         </>
 
-    cycle_adapt:        1
-    cycle_test:      2000
-    cycle_backup:    2000
-    cycle_finish:   10000
-    verbosity:          1
+    cycle_adapt  :        1
+    cycle_test   :   100000
+    cycle_backup :   200000
+    cycle_finish :  1000000
+    verbosity    :        1
 
 </>
 
