work on bhpt framework

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -8,7 +8,13 @@
 
 //    <#file> "../training/lion_test01.cfg" </>
 //    <#file> "../training/lion_test02.cfg" </>
-    <#file> "../training/bhpt_test01.cfg" </>
+
+//    <#file> "../training/bhpt_test01.cfg" </>
+//    <#file> "../training/bhpt_test02.cfg" </>
+//    <#file> "../training/bhpt_test03.cfg" </>
+//    <#file> "../training/bhpt_test04.cfg" </>
+//    <#file> "../training/bhpt_test05.cfg" </>
+    <#file> "../training/bhpt_test06.cfg" </>
 
 //    <#file> "../dev/kjv/hard_lstm_v0.cfg" </>
 //    <#file> "../dev/kjv/hard_lstm_v2.cfg" </>
