--- a/training/bhpt_test03.cfg
+++ b/training/bhpt_test03.cfg
@@ -1,14 +1,14 @@
 #! ../bin/Release/badapt_dev
 <bhpt_frame_s>
     tutor: <bhpt_tutor_sampler_s>
-        sampler: <bhpt_sampler_sine_random_s>
-            size_en:   32
-            pos_tgt:  0.9
-            neg_tgt: -0.9
+        sampler: <bhpt_sampler_binary_mul_s>
+            bits  :  4 // input size = bits * 2; output size = bits * 2
+            val_h :  0.5
+            val_l : -0.5
         </>
 
-        rval_prime : 1234
-        rval_test  : 5753
+        rval_prime : 3568
+        rval_test  : 5754
         test_size  : 10000
     </>
 
@@ -21,23 +21,16 @@
                 {
                     adaptive w = random( hidden_nodes [ dimof( a ) [ f2_t( # ) );
                     adaptive b = hidden_nodes [ f2_t( 0 );
-                    q = w ** a + b;
-
-                    //adaptive c = 0.5;
-
-                    // switch between activation functions
-                    //y = c * tanh( q ) + ( 1 - c ) * relu( q );
-                    y = q;
+                    y = w ** a + b;
                 };
 
-                y =	tanh <: layer( 1 ) <: relu_leaky <: layer( 16 ) <: relu_leaky <: layer( 16 ) <: relu_leaky <: layer( 16, f2_t( a ) );
-                //y =	layer( 1 ) <: layer( 16 ) <: layer( 16 ) <: layer( 16, a );
+                y =	tanh <: layer( dimof( a ) ) <: relu_leaky <: layer( 32 ) <: relu_leaky <: layer( 64, f2_t( a ) );
             }
         "
     </>
 
     adaptor: <bhpt_adaptor_epsilon_s>
-        epsilon: 0.001
+        epsilon: 0.01
     </>
 
     threads      : 0
