implemented haptive syntax based adaptor; work on adaptives

--- a/training/bhpt_test01.cfg
+++ b/training/bhpt_test01.cfg
@@ -36,12 +36,14 @@
         "
     </>
 
-    adaptor: <bhpt_adaptor_epsilon_s>
-        epsilon: 0.001
+    adaptor: <bhpt_adaptor_list_s>
+        <bhpt_adaptor_epsilon_s>  epsilon: 0.001 </>
+        <bhpt_adaptor_reg_l2_s>   lambda: 1E-7 </>
+        <bhpt_adaptor_zro_grad_s> </>
     </>
 
-    threads      : 0
-    prime_cycles_per_thread  : 1
+    threads      : 4
+    prime_cycles_per_thread  : 10
     cycle_test   :   100000
     cycle_backup :   200000
     cycle_finish :  1000000
