--- a/training/bhpt_test02.cfg
+++ b/training/bhpt_test02.cfg
@@ -27,8 +27,9 @@
     "
     </>
 
-    adaptor: <bhpt_adaptor_epsilon_s>
-        epsilon: 0.001
+    adaptor: <bhpt_adaptor_list_s>
+        <bhpt_adaptor_epsilon_s>  epsilon: 0.001 </>
+        <bhpt_adaptor_zro_grad_s> </>
     </>
 
     threads      : 0
