--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -14,7 +14,7 @@
 //    <#file> "../training/bhpt_test03.cfg" </>
 //    <#file> "../training/bhpt_test04.cfg" </>
 //    <#file> "../training/bhpt_test05.cfg" </>
-    <#file> "../training/bhpt_test06.cfg" </>
+//    <#file> "../training/bhpt_test06.cfg" </>
 
 //    <#file> "../dev/kjv/hard_lstm_v0.cfg" </>
 //    <#file> "../dev/kjv/hard_lstm_v2.cfg" </>
@@ -23,6 +23,8 @@
 //    <#file> "../dev/kjv/lion_lstm_v2.cfg" </>
 //    <#file> "../dev/kjv/a02/ll05.cfg" </>
 //    <#file> "../dev/holmes/a02/ll01.cfg" </>
+//    <#file> "../dev/holmes/a02/bhpt01.cfg" </>
+    <#file> "../dev/holmes/a02/bhpt02.cfg" </>
 //    <#file> "../dev/tolstoi_ak/a01/ll06.cfg" </>
 
 </></>
