--- a/training/bhpt_test05.cfg
+++ b/training/bhpt_test05.cfg
@@ -30,8 +30,9 @@
         "
     </>
 
-    adaptor: <bhpt_adaptor_epsilon_s>
-        epsilon: 0.01
+    adaptor: <bhpt_adaptor_list_s>
+        <bhpt_adaptor_epsilon_s>  epsilon: 0.01 </>
+        <bhpt_adaptor_zro_grad_s> </>
     </>
 
     threads      : 0
