--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -4,7 +4,8 @@
 
 <bcore_main_set_s> arr: <bcore_main_arr_s>
 //    <#file> "../eval/lion_eval_nop_set_01.cfg" </>
-//    <#file> "../eval/lion_eval_frame_set_01.cfg" </>
+    <#file> "../eval/lion_eval_frame_set_01.cfg" </>
+//    <#file> "../eval/lion_adaptor_eval_01.cfg" </>
 
 //    <#file> "../training/lion_test01.cfg" </>
 //    <#file> "../training/lion_test02.cfg" </>
@@ -24,7 +25,8 @@
 //    <#file> "../dev/kjv/a02/ll05.cfg" </>
 //    <#file> "../dev/holmes/a02/ll01.cfg" </>
 //    <#file> "../dev/holmes/a02/bhpt01.cfg" </>
-    <#file> "../dev/holmes/a02/bhpt02.cfg" </>
+//    <#file> "../dev/holmes/a02/bhpt02.cfg" </>
+    <#file> "../dev/holmes/a02/bhpt03.cfg" </>
 //    <#file> "../dev/tolstoi_ak/a01/ll06.cfg" </>
 
 </></>
