Replaced old 'random' operator with 'rand', 'rands' operators. These are able to act as noise generators.

--- a/eval/lion_eval_frame_set_01.cfg
+++ b/eval/lion_eval_frame_set_01.cfg
@@ -58,6 +58,23 @@
 
     <lion_eval_frame_plain_s>
         param: <lion_eval_frame_param_s>
+            name: "Random" verbosity: -1
+            src:
+            "
+                cell ( y <- a )
+                {
+                    y = rands( 2, a ); // generates different random values at each call
+                }
+            "
+            jacobian_test: false
+            recovery_test: true
+            in:"1:1"
+        </>
+        ap_cycles: 10
+    </>
+
+    <lion_eval_frame_plain_s>
+        param: <lion_eval_frame_param_s>
             name: "FIBONNACCI" verbosity: -1
             src:
             "
@@ -151,7 +168,7 @@
                 {
                     cell layer( y <- hidden_nodes, a )
                     {
-                        adaptive w = random( hidden_nodes [ dimof( a ) [ # );
+                        adaptive w = rand( hidden_nodes [ dimof( a ) [ # );
                         adaptive b = hidden_nodes [ 0;
                         q = w ** a + b;
 
@@ -180,7 +197,7 @@
                 {
                     cell layer( y, z <- hidden_nodes, a )
                     {
-                        adaptive w = random( hidden_nodes [ dimof( a ) [ # );
+                        adaptive w = rand( hidden_nodes [ dimof( a ) [ # );
                         adaptive b = hidden_nodes [ 0;
                         q = w ** a + b;
 
@@ -270,7 +287,7 @@
 
                         ah1 = a :: h : 1;
 
-                        adaptive w = random( 4 [ dim_h [ dimof( ah1 ) [ f2_t( # ) ) * f2_t( 0.5 );
+                        adaptive w = rand( 4 [ dim_h [ dimof( ah1 ) [ f2_t( # ) ) * f2_t( 0.5 );
 
                         c_ = ( lgst( ( w]0 ) ** ah1 ) * c ) + ( lgst( ( w]1 ) ** ah1 ) * tanh( ( w]2 ) ** ah1 ) );
                         y  = ( lgst( ( w]3 ) ** ah1 ) * tanh( c_ ) );
@@ -281,7 +298,7 @@
 
                     cell lstm( y <- dim_out, dim_h, a )
                     {
-                        adaptive w_r = random( dim_out [ ( dim_h + 1 ) [ f2_t( # ) );
+                        adaptive w_r = rand( dim_out [ ( dim_h + 1 ) [ f2_t( # ) );
                         y = softmax( w_r ** ( layer( dim_h, a ) : 1 ) );
                     };
 
@@ -310,7 +327,7 @@
 
                         dim_ah = dimof( ah );
 
-                        cell create_w( y <- rows, cols ) { y = random( rows [ cols [ f2_t( # ) ) * f2_t( 0.5 ); };
+                        cell create_w( y <- rows, cols ) { y = rand( rows [ cols [ f2_t( # ) ) * f2_t( 0.5 ); };
 
                         // adaptive holors
                         adaptive w_f = create_w( dim_h, dim_ah );
@@ -338,8 +355,8 @@
 
                     cell lstm( y <- dim_out, dim_h, a )
                     {
-                        adaptive w_r = random( dim_out [ dim_h [ f2_t( # ) );
-                        adaptive b_r =         dim_out [ f2_t( # );
+                        adaptive w_r = rand( dim_out [ dim_h [ f2_t( # ) );
+                        adaptive b_r =       dim_out [ f2_t( # );
                         y = softmax( w_r ** layer( dim_h, a ) + b_r );
                     };
 
