--- a/training/haptive_test01.cfg
+++ b/training/haptive_test01.cfg
@@ -18,7 +18,7 @@
 
                 cell layer( y => hidden_nodes, a )
                 {
-                    adaptive w = random( [ hidden_nodes ][ dimof( a ) ]# );
+                    adaptive w = rand( [ hidden_nodes ][ dimof( a ) ]# );
                     adaptive b = [ hidden_nodes ]0;
                     q = w ** a + b;
 
