--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -7,7 +7,7 @@
     <#file> "../eval/lion_eval_frame_set_01.cfg" </>
 //    <#file> "../eval/lion_adaptor_eval_01.cfg" </>
 
-//    <#file> "../training/lion_test01.cfg" </>
+    <#file> "../training/lion_test01.cfg" </>
 //    <#file> "../training/lion_test02.cfg" </>
 
 //    <#file> "../training/bhpt_test01.cfg" </>
@@ -26,7 +26,7 @@
 //    <#file> "../dev/holmes/a02/ll01.cfg" </>
 //    <#file> "../dev/holmes/a02/bhpt01.cfg" </>
 //    <#file> "../dev/holmes/a02/bhpt02.cfg" </>
-    <#file> "../dev/holmes/a02/bhpt03.cfg" </>
+//    <#file> "../dev/holmes/a02/bhpt03.cfg" </>
 //    <#file> "../dev/tolstoi_ak/a01/ll06.cfg" </>
 
 </></>
