--- a/training/bhpt_test01.cfg
+++ b/training/bhpt_test01.cfg
@@ -19,7 +19,7 @@
             {
                 cell layer( y <- hidden_nodes, a )
                 {
-                    adaptive w = random( hidden_nodes [ dimof( a ) [ f2_t( # ) );
+                    adaptive w = rand( hidden_nodes [ dimof( a ) [ f2_t( # ) );
                     adaptive b = hidden_nodes [ f2_t( 0 );
                     q = w ** a + b;
 
