--- a/training/bhpt_test02.cfg
+++ b/training/bhpt_test02.cfg
@@ -17,7 +17,7 @@
         {
             cell layer( y <- hidden_nodes, a )
             {
-                adaptive w = random( hidden_nodes [ dimof( a ) [ f2_t( # ) );
+                adaptive w = rand( hidden_nodes [ dimof( a ) [ f2_t( # ) );
                 adaptive b = hidden_nodes [ f2_t( 0 );
                 y = w ** a + b;
             };
