added operator 'unequal'; optimized dp-mcode for operators that need no gradient

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -7,7 +7,7 @@
     <#file> "../eval/lion_eval_frame_set_01.cfg" </>
 //    <#file> "../eval/lion_adaptor_eval_01.cfg" </>
 
-    <#file> "../training/lion_test01.cfg" </>
+//    <#file> "../training/lion_test01.cfg" </>
 //    <#file> "../training/lion_test02.cfg" </>
 
 //    <#file> "../training/bhpt_test01.cfg" </>
