--- a/eval/lion_eval_frame_set_01.cfg
+++ b/eval/lion_eval_frame_set_01.cfg
@@ -35,6 +35,13 @@
         <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a, b ) { y = a / ( b + a ); };" in: "1:2, f2_t(2)" out: "0.33333:0.5"       </> </>
     </> </>
 
+    <lion_eval_frame_set_s> param: <lion_eval_frame_param_s> name: "LOGIC" verbosity: 10 epsilon: 1E-3 max_dev: 1E-2  jacobian_test: false recovery_test: true </> arr: <lion_eval_frame_arr_s>
+        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a, b ) { y = a && b; };" in:"1:1, 0:1" out:"-1: 1" </> </>
+//        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a, b ) { y = a || b; };" in:"1:1, 0:1" out:" 1: 1" </> </>
+//        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a, b ) { y = a == b; };" in:"0:1, 0:1" out:" 1: 1" </> </>
+//        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a, b ) { y = a != b; };" in:"0:1, 0:1" out:"-1:-1" </> </>
+    </> </>
+
     <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s>
         name: "ACKERMANN" verbosity: -1
         src:
