--- a/eval/lion_eval_frame_set_01.cfg
+++ b/eval/lion_eval_frame_set_01.cfg
@@ -47,24 +47,26 @@
         <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a, b ) { y = a >= b; };" in:"0:1, 2:1" out:"-1: 1" </> </>
     </> </>
 
+    <lion_eval_frame_set_s> param: <lion_eval_frame_param_s> name: "BRANCH" verbosity: -1 epsilon: 1E-3 max_dev: 1E-2  jacobian_test: true recovery_test: true </> arr: <lion_eval_frame_arr_s>
+        <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s> src: "( y <- a, b, c ) { y = iff( a, b, c ); };" in:"(1:-1), 2, 3" out: "2:3"</> </>
+    </> </>
+
     <lion_eval_frame_plain_s> param: <lion_eval_frame_param_s>
         name: "ACKERMANN" verbosity: -1
         src:
         "
-            cell ( y <- )
+            cell ( y <- a, b )
             {
                 cell ack( y <- n, m )
                 {
-                    y =
-                      if     ( n == 0 ) then m + 1;
-                      else if( m == 0 ) then ack( n - 1, 1 );
-                      else                   ack( n - 1, ack( n, m - 1 ) );
+                    y = iff( n == 0, m + 1 ) <: iff( m == 0, ack( n - 1, 1 ) ) <: ack( n - 1 ) <: ack( n, m - 1 );
                 };
-                y = ack( 3, 2 );
+                y = ack( constof( a ), constof( b ) );
             }
         "
         jacobian_test: false
         recovery_test: true
+        in:"3, 2"
         out:"29"
     </> </>
 
